# IMAPdedup

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  README.txt  imapdedup.py  pyproject.toml
.github/workflows/: docker.yml
src/imapdedup/: __init__.py  imapdedup.py
