[project]
name = "imapdedup"
version = "0.1.2"
description = "IMAP de-duplication tool"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.scripts]
imapdedup = "imapdedup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imapdedup"]
