[project]
name = "imapdedup"
version = "1.2"
description = "IMAP de-duplication tool"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []
license = {text = "GPL-2.0-only"}
authors = [
    {name = "Quentin Stafford-Fraser"}
]
keywords = ["imap", "email", "duplicate", "deduplication", "mail"]

[project.optional-dependencies]
keyring = ["keyring"]

[project.scripts]
imapdedup = "imapdedup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imapdedup"]
